<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTypeItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewStartYearItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Type" />

    <TextView
        android:id="@+id/textViewStartYearItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewYearsDivider"
        app:layout_constraintStart_toEndOf="@+id/textViewTypeItem"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2020" />

    <TextView
        android:id="@+id/textViewYearsDivider"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/divider"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewEndYearItem"
        app:layout_constraintStart_toEndOf="@+id/textViewStartYearItem"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEndYearItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewYearsDivider"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2023" />

    <TextView
        android:id="@+id/textViewEducationDescriptionItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewEndYearItem"
        tools:text="Desc" />

    <EditText
        android:id="@+id/editTextTypeEduItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:hint="@string/education_type"
        android:inputType="text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextYearStartItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:importantForAutofill="no"
        android:hint="@string/year_start"
        android:inputType="date"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/editTextYearEndItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTypeEduItem" />

    <EditText
        android:id="@+id/editTextYearEndItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:importantForAutofill="no"
        android:hint="@string/year_end"
        android:inputType="date"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextYearStartItem"
        app:layout_constraintTop_toBottomOf="@+id/editTextTypeEduItem" />

    <EditText
        android:id="@+id/editTextEducationDescriptionItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:importantForAutofill="no"
        android:hint="@string/description"
        android:inputType="text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextYearEndItem" />

    <ImageButton
        android:id="@+id/imageButtonDeleteEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@drawable/ic_delete_button"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEducationDescriptionItem"
        app:tint="@android:color/holo_red_dark" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/clViewGroupEdu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="textViewTypeItem, textViewStartYearItem, textViewYearsDivider, textViewEndYearItem, textViewEducationDescriptionItem" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/clEditGroupEdu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        app:constraint_referenced_ids="editTextTypeEduItem, editTextYearStartItem, editTextYearEndItem, editTextEducationDescriptionItem, imageButtonDeleteEducation" />

</androidx.constraintlayout.widget.ConstraintLayout>